--- a/web_client/views/posts.html
+++ b/web_client/views/posts.html
@@ -1,4 +1,5 @@
 <ul class="postUl" ng-controller='postDisplayController'>
+	<li class="postLi">{{message}}</li>
 	<li class="postLi">
 		<div class="row">
 	    	<div class="col-md-6">
