--- a/web_client/views/posts.html
+++ b/web_client/views/posts.html
@@ -1,76 +1,25 @@
 <ul class="postUl" ng-controller='postDisplayController'>
-	<li class="postLi">{{message}}</li>
-	<li class="postLi">
-		<div class="row">
-	    	<div class="col-md-6">
-	    		<p class="postAuthorName"><span class="glyphicon glyphicon-user"></span> Edward Hu <span class="talkMode">Shout:</span></p>
-	    	</div>
-	    	<div class="col-md-6">
-	    		<span class="pull-right postDateTime">
-	    		Said Tue 20:23 Jun 14,2016
-	    		</span>
-	    	</div>
-	    </div>
-		
-		<p><span class="postCat"><a href="#">Social</a></span> <span class="postBody">This is a test post and I have nothing to say at this moment. I want to make an iOS and Android app as well. My goal is to be a full-stack developer!!</span></p>
-		<div class="row status">
-			<div class="col-md-12">
-			<p class="pull-right">
-		    	<span class="glyphicon glyphicon-heart-empty"></span>
-		    	<span>132k</span>
-		    	<span class="margin-right"></span>
-		    	<span class="glyphicon glyphicon-comment"></span>
-		    	<span>1.3k</span>			
-			</p>
-			</div>
-		</div>
-	</li>
-	<li class="postLi">
-		<div class="row">
-	    	<div class="col-md-6">
-	    		<p class="postAuthorName"><span class="glyphicon glyphicon-user"></span> Aris Peng <span class="talkMode">Cry:</span></p>
-	    	</div>
-	    	<div class="col-md-6">
-	    		<span class="pull-right postDateTime">
-	    		Said Tue 21:23 Jun 14,2016
-	    		</span>
-	    	</div>
-	    </div>
-		
-		<p><span class="postCat"><a href="#">School</a></span> <span class="postBody">I was kill by Math!!!!!!! ... Shy :'(</span></p>
-		<div class="row status">
-			<div class="col-md-12">
-			<p class="pull-right">
-		    	<span class="glyphicon glyphicon-heart-empty"></span>
-		    	<span>132k</span>
-		    	<span class="margin-right"></span>
-		    	<span class="glyphicon glyphicon-comment"></span>
-		    	<span>1.3k</span>			
-			</p>
-			</div>
-		</div>
-	</li>	
 	<li class="postLi" ng-repeat="post in posts">
 		<div class="row">
 	    	<div class="col-md-6">
-	    		<p class="postAuthorName"><span class="glyphicon glyphicon-user"></span>{{authorName}} <span class="talkMode"> {{talkMode}}:</span></p>
+	    		<p class="postAuthorName"><span class="glyphicon glyphicon-user"></span> {{post.authorName}} <span class="talkMode"> {{post.talkMode}}:</span></p>
 	    	</div>
 	    	<div class="col-md-6">
 	    		<span class="pull-right postDateTime">
-	    		Said on {{postTime}}
+	    		Said on {{post.postTime}}
 	    		</span>
 	    	</div>
 	    </div>
 		
-		<p><span class="postCat"><a href="#">{{postCat}}</a></span> <span class="postBody">{{postBody}}</span></p>
+		<p><span class="postCat"><a href="#">{{post.postCat}}</a></span> <span class="postBody">{{post.postBody}}</span></p>
 		<div class="row status">
 			<div class="col-md-12">
 			<p class="pull-right">
 		    	<span class="glyphicon glyphicon-heart-empty"></span>
-		    	<span>{{postLikes}}</span>
+		    	<span>{{post.postLikes}}</span>
 		    	<span class="margin-right"></span>
 		    	<span class="glyphicon glyphicon-comment"></span>
-		    	<span>{{postComments.length}}</span>			
+		    	<span>{{post.postCommentsLikes}}</span>			
 			</p>
 			</div>
 		</div>		
