--- a/web_client/views/posts.html
+++ b/web_client/views/posts.html
@@ -1,4 +1,50 @@
-<ul class="postUl" ng-controller='postDisplayController'>
+<div ng-controller='postDisplayController'>
+
+<img src="/resources/images/AddPostIcon.png" class="floatAddBtn animated jello" ng-click="showAddPostWindow=true">
+
+<!-- Post Window -->
+<div id="AddPostWindow" class="AddPostWindow panel animated flipInX" ng-show="showAddPostWindow">
+	<div class="panel-heading closetColor">
+		<div class="row">
+	    	<div class="col-md-6 col-xs-6">
+	    		<span class="glyphicon glyphicon-user"></span> <span> Anonymous or not</span>
+	    	</div>
+	    	<div class="col-md-6 col-xs-6">
+	    		<span class="pull-right">
+	    			<span class="glyphicon glyphicon-remove" ng-click="showAddPostWindow=false"></span>
+	    		</span>
+	    	</div>
+	    </div>
+	</div>
+	<div class="panel-body form-group nowrap">
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Say">Say</label>
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Complain">Complain</label>
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Shout">Shout</label>
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Cry">Cry</label>
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Whisper">Whisper</label>
+		<div class="row margin-top">
+			<div class="col-md-3">
+			      <select class="form-control " ng-model="postCat">
+			        <option>School</option>
+			        <option>Family</option>
+			        <option>Social</option>
+			        <option>Friends</option>
+			        <option>Company</option>
+			        <option>Others</option>		        		        
+			      </select>				
+			</div>
+			<div class="col-md-9">
+				<textarea class="form-control" rows="5" placeholder="Let's hear your voice..." ng-model="postBody"></textarea>
+			</div>
+		</div>
+		<div class="margin-top">
+			<button class="btn btn-default pull-right" ng-click="createPost()">Post</button>
+		</div>
+	</div>
+</div>
+
+
+<ul class="postUl">
 	<li class="postLi" ng-repeat="post in posts">
 		<div class="row">
 	    	<div class="col-md-6">
@@ -25,3 +71,5 @@
 		</div>		
 	</li>
 </ul>
+
+</div>
