--- a/web_client/views/posts.html
+++ b/web_client/views/posts.html
@@ -1,49 +1,4 @@
 <div ng-controller='postDisplayController'>
-
-<img src="/resources/images/AddPostIcon.png" class="floatAddBtn animated jello" ng-click="showAddPostWindow=true">
-
-<!-- Post Window -->
-<div id="AddPostWindow" class="AddPostWindow panel animated flipInX" ng-show="showAddPostWindow">
-	<div class="panel-heading closetColor">
-		<div class="row">
-	    	<div class="col-md-6 col-xs-6">
-	    		<span class="glyphicon glyphicon-user"></span> <span> Anonymous or not</span>
-	    	</div>
-	    	<div class="col-md-6 col-xs-6">
-	    		<span class="pull-right">
-	    			<span class="glyphicon glyphicon-remove" ng-click="showAddPostWindow=false"></span>
-	    		</span>
-	    	</div>
-	    </div>
-	</div>
-	<div class="panel-body form-group nowrap">
-			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Say">Say</label>
-			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Complain">Complain</label>
-			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Shout">Shout</label>
-			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Cry">Cry</label>
-			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Whisper">Whisper</label>
-		<div class="row margin-top">
-			<div class="col-md-3">
-			      <select class="form-control " ng-model="postCat">
-			        <option>School</option>
-			        <option>Family</option>
-			        <option>Social</option>
-			        <option>Friends</option>
-			        <option>Company</option>
-			        <option>Others</option>		        		        
-			      </select>				
-			</div>
-			<div class="col-md-9">
-				<textarea class="form-control" rows="5" placeholder="Let's hear your voice..." ng-model="postBody"></textarea>
-			</div>
-		</div>
-		<div class="margin-top">
-			<button class="btn btn-default pull-right" ng-click="createPost()">Post</button>
-		</div>
-	</div>
-</div>
-
-
 <ul class="postUl">
 	<li class="postLi" ng-repeat="post in posts">
 		<div class="row">
@@ -72,4 +27,69 @@
 	</li>
 </ul>
 
+<img src="/resources/images/AddPostIcon.png" class="floatAddBtn animated jello" ng-click="showAddPostWindow=true">
+
+<!-- Post Window -->
+<form name="newPost">
+<div id="AddPostWindow" class="AddPostWindow panel animated flipInX" ng-show="showAddPostWindow">
+	<div class="panel-heading closetColor">
+		<div class="row">
+	    	<div class="col-md-10 col-xs-10">
+	    		<span class="glyphicon glyphicon-user"></span> <span> Anonymous or not</span>
+	    	</div>
+	    	<div class="col-md-2 col-xs-2">
+	    		<span class="pull-right">
+	    			<span class="glyphicon glyphicon-remove" ng-click="showAddPostWindow=false"></span>
+	    		</span>
+	    	</div>
+	    </div>
+	</div>
+	<div class="panel-body form-group nowrap">
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Say">Say</label>
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Complain">Complain</label>
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Shout">Shout</label>
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Cry">Cry</label>
+			<label class="radio-inline"><input type="radio" name="talkModeRadio" ng-model="talkModeRadio" value="Whisper">Whisper</label>
+		<div class="margin-top">
+			      <select class="form-control " ng-model="postCat">
+			        <option>School</option>
+			        <option>Family</option>
+			        <option>Social</option>
+			        <option>Friends</option>
+			        <option>Company</option>
+			        <option>Others</option>		        		        
+			      </select>				
+
+				<textarea class="form-control margin-top" rows="5" placeholder="Share your secrets HERE ..." ng-model="postBody" required name="postBodyTextField"></textarea>
+
+		</div>
+		<div class="margin-top">
+			<button class="btn btn-default pull-right closetColor whiteFontColor" ng-click="createPost()" ng-disabled="newPost.$invalid"><strong>Post</strong></button>		
+			<span ng-show="newPost.$invalid" class="pull-right margin-right closetFontColor fontMedium">Please say something.</span>
+		</div>
+	</div>
+</div>
+</form>
+<!-- PageInation -->
+<div class="row center-block">
+	<nav>
+	  <ul class="pagination">
+	    <li>
+	      <a href="#" aria-label="Previous">
+	        <span aria-hidden="true">&laquo;</span>
+	      </a>
+	    </li>
+	    <li><a href="#">1</a></li>
+	    <li><a href="#">2</a></li>
+	    <li><a href="#">3</a></li>
+	    <li><a href="#">4</a></li>
+	    <li><a href="#">5</a></li>
+	    <li>
+	      <a href="#" aria-label="Next">
+	        <span aria-hidden="true">&raquo;</span>
+	      </a>
+	    </li>
+	  </ul>
+	</nav>
+</div>
 </div>
